--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\scripts\giraItem.cs" />
      <Compile Include="Assets\scripts\jogador.cs" />
      <Compile Include="Assets\scripts\moveTiro.cs" />
+     <Compile Include="Assets\scripts\retiraVida.cs" />
      <None Include="Assets\SampleScenes\Shaders\Skybox-Procedural.shader" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2019.4.8f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
