--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -44,6 +44,7 @@
      <Compile Include="Assets\SampleScenes\Scripts\ParticleSceneControls.cs" />
      <Compile Include="Assets\SampleScenes\Scripts\PlaceTargetWithMouse.cs" />
      <Compile Include="Assets\SampleScenes\Scripts\SlowMoButton.cs" />
+     <Compile Include="Assets\scripts\GameController.cs" />
      <Compile Include="Assets\scripts\apontarParaInimigo.cs" />
      <Compile Include="Assets\scripts\canhaoAtira.cs" />
      <Compile Include="Assets\scripts\destroiObjeto.cs" />
